src/styles/globals.css
/* ... */
.header-mainbar {
  padding-top: 10px;
  padding-bottom: 10px;
}

nav.header-navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
}

.header-navbar-logo {
  width: 32px;
  height: 32px;
  overflow: hidden;
  border-radius: 50%;
}

.header-navbar-links {
  width: auto;
  text-align: right;
}

.header-navbar-links ul {
  padding: 0px;
  margin: 0px;
  list-style: none;
  color: #fff;
  display: flex;
  align-items: flex-end;
  width: 100%;
}

.header-navbar-links ul li {
  width: auto;
  padding-left: 5px;
  padding-right: 5px;
}

.header-navbar-links ul li a {
  color: #fff;
  font-size: 18px;
  font-weight: 600;
  text-decoration: none;
}

.header-navbar-links ul li a:hover {
  text-decoration: underline;
}

nav.footer-navbar {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
}

.footer-navbar-logo {
  padding-right: 20px;
}

.footer-navbar-logo img {
  border-radius: 50%;
  overflow: hidden;
}

.footer-navbar-links {
  padding-left: 20px;
}

.footer-navbar-links ul {
  padding: 0px;
  margin: 0px;
  list-style: none;
}

.standard-page-content {
  padding-top: 55px;
  padding-bottom: 55px;
  min-height: calc(100vh - 110px);
}

body.dark-mode {
  background-color: #050505;
  color: #fff;
}

.dark-mode h1,
.dark-mode h2,
.dark-mode h3,
.dark-mode h4,
.dark-mode h5,
.dark-mode p,
.dark-mode a,
.dark-mode small,
.dark-mode strong,
.dark-mode span,
.dark-mode ul,
.dark-mode ul li,
.dark-mode label {
  color: #fff;
}

.dark-mode nav.footer-navbar,
.dark-mode nav.footer-navbar a {
  color: #f1f1f1;
}

.dark-mode .item-card {
  background: #171923;
  border-color: #252838;
}

.dark-mode #GithubLinkWrap svg {
  fill: #fff;
}

.dark-mode .item-card:hover > .item-content {
  background: #252838;
}

.button-prime-inverted {
  background: #171923;
  color: #fff;
  border-color: #171923;
}

.notification {
  position: fixed;
  z-index: 9999;
  bottom: 10px;
  right: 10px;
  width: 100%;
  max-width: 500px;
  border-radius: 4px;
  background: #171923;
  border: 1px solid #252838;
  padding: 10px 15px;
}

@media (max-width: 780px) {
  .notification {
    max-width: calc(100vw - 20px);
  }
}

.notification__contents_title {
  font-size: 22px;
  line-height: 24px;
  margin-bottom: 10px;
  font-weight: 600;
}

